@@ -1,7 +1,7 @@
 package com.abetappteam.abetapp.repository;
 
 import com.abetappteam.abetapp.BaseRepositoryTest;
-import com.abetappteam.abetapp.entity.CourseEntity;
+import com.abetappteam.abetapp.entity.Course;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -24,162 +24,120 @@ class CourseRepositoryTest extends BaseRepositoryTest {
     @Test
     void shouldSaveAndRetrieveCourse() {
         // Given
-        CourseEntity course = createTestCourse("CS101", "Introduction to Computer Science",
-                1L, 1L, null, null);
+        Course course = createTestCourse("CS101", "Introduction to Computer Science",
+                "An introductory course covering fundamental concepts of computer science", 1L);
 
         // When
-        CourseEntity saved = courseRepository.save(course);
+        Course saved = courseRepository.save(course);
         clearContext();
-        Optional<CourseEntity> found = courseRepository.findById(saved.getId());
+        Optional<Course> found = courseRepository.findById(saved.getId());
 
         // Then
         assertThat(found).isPresent();
-        assertThat(found.get().getCourseId()).isEqualTo("CS101");
-        assertThat(found.get().getName()).isEqualTo("Introduction to Computer Science");
-        assertThat(found.get().getProgramId()).isEqualTo(1L);
+        assertThat(found.get().getCourseCode()).isEqualTo("CS101");
+        assertThat(found.get().getCourseName()).isEqualTo("Introduction to Computer Science");
         assertThat(found.get().getSemesterId()).isEqualTo(1L);
+        assertThat(found.get().getIsActive()).isTrue();
     }
 
     @Test
     void shouldFindBySemesterIdWithPagination() {
         // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, null);
-        createAndSaveTestCourse("MATH101", "Calculus I", 1L, 1L, null, null);
-        createAndSaveTestCourse("PHY101", "Physics I", 2L, 1L, null, null); // different semester
+        createAndSaveTestCourse("CS101", "Intro to CS", "Description 1", 1L);
+        createAndSaveTestCourse("MATH101", "Calculus I", "Description 2", 1L);
+        createAndSaveTestCourse("PHY101", "Physics I", "Description 3", 2L); // different semester
 
         // When
         Pageable pageable = PageRequest.of(0, 10);
-        Page<CourseEntity> found = courseRepository.findBySemesterId(1L, pageable);
+        Page<Course> found = courseRepository.findBySemesterId(1L, pageable);
 
         // Then
         assertThat(found.getContent()).hasSize(2);
-        assertThat(found.getContent()).extracting(CourseEntity::getSemesterId)
+        assertThat(found.getContent()).extracting(Course::getSemesterId)
                 .containsOnly(1L);
     }
 
     @Test
-    void shouldFindByProgramIdWithPagination() {
+    void shouldFindByCourseCodeIgnoreCase() {
         // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, null);
-        createAndSaveTestCourse("CS102", "Data Structures", 1L, 1L, null, null);
-        createAndSaveTestCourse("MATH101", "Calculus I", 1L, 2L, null, null); // different program
+        createAndSaveTestCourse("CS101", "Introduction to Computer Science", "Description", 1L);
 
         // When
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<CourseEntity> found = courseRepository.findByProgramId(1L, pageable);
-
-        // Then
-        assertThat(found.getContent()).hasSize(2);
-        assertThat(found.getContent()).extracting(CourseEntity::getProgramId)
-                .containsOnly(1L);
-    }
-
-    @Test
-    void shouldFindByCourseIdIgnoreCase() {
-        // Given
-        createAndSaveTestCourse("CS101", "Introduction to Computer Science", 1L, 1L, null, null);
-
-        // When
-        Optional<CourseEntity> found = courseRepository.findByCourseIdIgnoreCase("cs101");
+        Optional<Course> found = courseRepository.findByCourseCodeIgnoreCase("cs101");
 
         // Then
         assertThat(found).isPresent();
-        assertThat(found.get().getCourseId()).isEqualTo("CS101");
+        assertThat(found.get().getCourseCode()).isEqualTo("CS101");
     }
 
     @Test
-    void shouldSearchByNameOrCourseIdOrSection() {
+    void shouldSearchByNameOrCourseCode() {
         // Given
-        createAndSaveTestCourse("CS101", "Introduction to Computer Science", 1L, 1L, null, "SECTION_A");
-        createAndSaveTestCourse("DATA101", "Database Systems", 1L, 1L, null, "SECTION_B");
+        createAndSaveTestCourse("CS101", "Introduction to Computer Science", "Description 1", 1L);
+        createAndSaveTestCourse("DATA101", "Database Systems", "Description 2", 1L);
 
-        // When
-        List<CourseEntity> found = courseRepository.searchByNameOrCourseIdOrSection("SECTION_A");
+        // When - search by course code
+        List<Course> foundByCode = courseRepository.searchByNameOrCourseCode("CS101");
+        // When - search by name
+        List<Course> foundByName = courseRepository.searchByNameOrCourseCode("Database");
 
         // Then
-        assertThat(found).hasSize(1);
-        assertThat(found.get(0).getSection()).isEqualTo("SECTION_A");
-        assertThat(found.get(0).getCourseId()).isEqualTo("CS101");
+        assertThat(foundByCode).hasSize(1);
+        assertThat(foundByCode.getFirst().getCourseCode()).isEqualTo("CS101");
+
+        assertThat(foundByName).hasSize(1);
+        assertThat(foundByName.getFirst().getCourseName()).contains("Database");
     }
 
     @Test
-    void shouldFindCoursesWithAndWithoutSections() {
+    void shouldFindActiveCourses() {
         // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, "A"); // with section
-        createAndSaveTestCourse("CS102", "Data Structures", 1L, 1L, null, null); // without section
-        createAndSaveTestCourse("MATH101", "Calculus I", 1L, 1L, null, "B"); // with section
+        Course active1 = createAndSaveTestCourse("CS101", "Intro to CS", "Description 1", 1L);
+        Course active2 = createAndSaveTestCourse("CS102", "Data Structures", "Description 2", 1L);
+        Course inactive = createAndSaveTestCourse("MATH101", "Calculus I", "Description 3", 1L);
+        inactive.setIsActive(false);
+        courseRepository.save(inactive);
 
         // When
-        List<CourseEntity> withSections = courseRepository.findCoursesWithSections();
-        List<CourseEntity> withoutSections = courseRepository.findCoursesWithoutSections();
+        List<Course> activeCourses = courseRepository.findByIsActive(true);
 
         // Then
-        assertThat(withSections).hasSize(2);
-        assertThat(withoutSections).hasSize(1);
-        assertThat(withSections).allMatch(CourseEntity::hasSection);
-        assertThat(withoutSections).noneMatch(CourseEntity::hasSection);
-    }
-
-    @Test
-    void shouldCheckSectionExistence() {
-        // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, "A");
-
-        // When/Then
-        assertThat(courseRepository.existsByCourseIdAndSectionAndSemesterId("cs101", "a", 1L)).isTrue();
-        assertThat(courseRepository.existsByCourseIdAndSectionAndSemesterId("cs101", "b", 1L)).isFalse();
-        assertThat(courseRepository.existsByCourseIdAndSectionAndSemesterId("cs101", "a", 2L)).isFalse();
-    }
-
-    @Test
-    void shouldFindByInstructorId() {
-        // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, 1L, "A");
-        createAndSaveTestCourse("CS102", "Data Structures", 1L, 1L, 1L, "B");
-        createAndSaveTestCourse("MATH101", "Calculus I", 1L, 1L, 2L, "A"); // different instructor
-
-        // When
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<CourseEntity> found = courseRepository.findByInstructorId(1L, pageable);
-
-        // Then
-        assertThat(found.getContent()).hasSize(2);
-        assertThat(found.getContent()).extracting(CourseEntity::getInstructorId)
-                .containsOnly(1L);
+        assertThat(activeCourses).hasSize(2);
+        assertThat(activeCourses).allMatch(Course::getIsActive);
     }
 
     @Test
     void shouldUpdateCourse() {
         // Given
-        CourseEntity saved = createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, null);
+        Course saved = createAndSaveTestCourse("CS101", "Intro to CS", "Original description", 1L);
         Long id = saved.getId();
 
         entityManager.flush();
         entityManager.clear();
 
         // When
-        CourseEntity toUpdate = courseRepository.findById(id).orElseThrow();
-        toUpdate.setName("Updated Course Name");
-        toUpdate.setCourseId("CS201");
-        toUpdate.setSection("B");
+        Course toUpdate = courseRepository.findById(id).orElseThrow();
+        toUpdate.setCourseName("Updated Course Name");
+        toUpdate.setCourseCode("CS201");
+        toUpdate.setCourseDescription("Updated description");
 
-        CourseEntity updated = courseRepository.save(toUpdate);
+        Course updated = courseRepository.save(toUpdate);
 
         entityManager.flush();
         entityManager.clear();
 
         // Then
-        Optional<CourseEntity> found = courseRepository.findById(id);
+        Optional<Course> found = courseRepository.findById(id);
         assertThat(found).isPresent();
-        assertThat(found.get().getName()).isEqualTo("Updated Course Name");
-        assertThat(found.get().getCourseId()).isEqualTo("CS201");
-        assertThat(found.get().getSection()).isEqualTo("B");
+        assertThat(found.get().getCourseName()).isEqualTo("Updated Course Name");
+        assertThat(found.get().getCourseCode()).isEqualTo("CS201");
+        assertThat(found.get().getCourseDescription()).isEqualTo("Updated description");
     }
 
     @Test
     void shouldDeleteCourse() {
         // Given
-        CourseEntity saved = createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, null);
+        Course saved = createAndSaveTestCourse("CS101", "Intro to CS", "Description", 1L);
         Long id = saved.getId();
 
         assertThat(courseRepository.findById(id)).isPresent();
@@ -190,57 +148,51 @@ class CourseRepositoryTest extends BaseRepositoryTest {
         clearContext();
 
         // Then
-        Optional<CourseEntity> found = courseRepository.findById(id);
+        Optional<Course> found = courseRepository.findById(id);
         assertThat(found).isEmpty();
     }
 
     @Test
-    void shouldCountByProgramId() {
+    void shouldCountBySemesterId() {
         // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, null);
-        createAndSaveTestCourse("CS102", "Data Structures", 1L, 1L, null, null);
-        createAndSaveTestCourse("MATH101", "Calculus I", 1L, 2L, null, null); // different program
+        createAndSaveTestCourse("CS101", "Intro to CS", "Description 1", 1L);
+        createAndSaveTestCourse("CS102", "Data Structures", "Description 2", 1L);
+        createAndSaveTestCourse("MATH101", "Calculus I", "Description 3", 2L); // different semester
 
         // When
-        long count = courseRepository.countByProgramId(1L);
+        long count = courseRepository.countBySemesterId(1L);
 
         // Then
         assertThat(count).isEqualTo(2);
     }
 
     @Test
-    void shouldFindByCourseIdAndSection() {
+    void shouldCheckCourseCodeExistence() {
         // Given
-        createAndSaveTestCourse("CS101", "Intro to CS", 1L, 1L, null, "A");
-        createAndSaveTestCourse("CS102", "Data Structures", 1L, 1L, null, "B"); // Different course ID
+        createAndSaveTestCourse("CS101", "Intro to CS", "Description", 1L);
 
-        // When
-        Optional<CourseEntity> found = courseRepository.findByCourseIdIgnoreCaseAndSection("cs101", "A");
-
-        // Then
-        assertThat(found).isPresent();
-        assertThat(found.get().getCourseId()).isEqualTo("CS101");
-        assertThat(found.get().getSection()).isEqualTo("A");
+        // When/Then
+        assertThat(courseRepository.existsByCourseCodeIgnoreCase("cs101")).isTrue();
+        assertThat(courseRepository.existsByCourseCodeIgnoreCase("CS101")).isTrue();
+        assertThat(courseRepository.existsByCourseCodeIgnoreCase("CS999")).isFalse();
     }
 
     // Helper method to create test courses without saving
-    private CourseEntity createTestCourse(String courseId, String name, Long semesterId,
-            Long programId, Long instructorId, String section) {
-        CourseEntity course = new CourseEntity();
-        course.setName(name);
-        course.setCourseId(courseId);
+    private Course createTestCourse(String courseCode, String courseName,
+                                    String courseDescription, Long semesterId) {
+        Course course = new Course();
+        course.setCourseCode(courseCode);
+        course.setCourseName(courseName);
+        course.setCourseDescription(courseDescription);
         course.setSemesterId(semesterId);
-        course.setProgramId(programId);
-        course.setInstructorId(instructorId);
-        course.setSection(section);
-        course.setDescription("Test description for " + name);
+        course.setIsActive(true);
         return course;
     }
 
     // Helper method to create and save test courses in one step
-    private CourseEntity createAndSaveTestCourse(String courseId, String name, Long semesterId,
-            Long programId, Long instructorId, String section) {
-        CourseEntity course = createTestCourse(courseId, name, semesterId, programId, instructorId, section);
+    private Course createAndSaveTestCourse(String courseCode, String courseName,
+                                           String courseDescription, Long semesterId) {
+        Course course = createTestCourse(courseCode, courseName, courseDescription, semesterId);
         return courseRepository.save(course);
     }
 }
